Prevent scrollbar during page transitions

--- a/src/main.sass
+++ b/src/main.sass
@@ -8,6 +8,10 @@
 *::after
   box-sizing: border-box
 
+#app,
+body
+  overflow: hidden
+
 .page
   position: absolute
   z-index: 0
